Russian chain for partition in the caucasus

--- a/localisation/KR_Partitions_l_english.yml
+++ b/localisation/KR_Partitions_l_english.yml
@@ -11,6 +11,180 @@ part.1.f:0 "Liberate Prussia"
 part.1.g:0 "The German Empire can have their lands back if they join us!"
 part.1.h:0 "We can't trust the Germans, total occupation is preferable."
 
+part.11.t:0 "The Second treaty of Brest-Litovsk?"
+part.11.d:0 "With eastern Europe under firm Russian military control there is not even the slightest hope for our government to return to the mainland. The Russians have sent us a proposal, though, in which they promise to return our lands to us in return for a peace treaty and recognition of all their territorial gains in eastern Europe."
+part.11.a:0 "We have no choice."
+part.11.b:0 "We will never accept your proposal!"
+
+part.12.t:0 "The Second treaty of Brest-Litovsk."
+part.12.d:0 "The Government of the German Empire, seeing no other choice, accepted our offer. The humiliatition they brought upon us with the Brest-Litovsk treaty is now but a distant memory! In accordance with our agreement we are now giving the German provinces we conquered back to the German Empire."
+part.12.a:0 "A small price for a great victory!"
+
+part.13.t:0 "The darkest hour of the German Empire"
+part.13.d:0 "We will now honour the deal and enter an alliance with Russia."
+part.13.a:0 "We have no other choice."
+
+part.14.t:0 "A loyal puppet in Berlin"
+part.14.d:0 "The new government in Berlin is firmly under our control and Germany is now a loyal member of our alliance. Hopefully this will prevent any future conflicts between our nations."
+part.14.a:0 "Pax Europa!"
+
+part.15.t:0 "The Kaiserliches Heer"
+part.15.d:0 "Form up the Active Defense!"
+part.15.a:0 "Form up the Troops!"
+
+part.16.t:0 "Choosing the new german Head of State."
+part.16.d:0 "We have the opportunity to install a member of the house of Romanov as the new Emperor of Germany. It may, however, be wise to let the germans choose their own government."
+part.16.a:0 "Grand Duke Boris will be Wilhelm V!"
+part.16.b:0 "Let the Germans decide, as long as they stay loyal."
+
+part.17.t:0 "A new Emperor!"
+part.17.d:0 "The Russian Empire has imposed Grand Duke Boris as the new German Emperor. There's nothing we can do, we have to fold and become a empire again."
+part.17.a:0 "Long live Wilhelm V!"
+
+part.18.t:0 "Independent Bavaria"
+part.18.d:0 "...Nobody sees this..."
+part.18.a:0 "Bavaria is once again fully independent!"
+
+part.19.t:0 "Independent Prussia"
+part.19.d:0 "...Nobody sees this..."
+part.19.a:0 "A new beginning."
+
+part.20.t:0 "Independent Rhineland"
+part.20.d:0 "...Nobody sees this..."
+part.20.a:0 "Of course we're happy to be taking orders from Moscow!"
+
+part.21.t:0 "Independent Northern Germany"
+part.21.d:0 "...Nobody sees this..."
+part.21.a:0 "Norddeutschland is independent at last!"
+
+part.22.t:0 "Choosing the new Prussian Head of State"
+part.22.d:0 "We have the opportunity to install a member of the house of Romanov as the new king of Prussia. It may be wise, however, to let the prussians choose their own government."
+part.22.a:0 "Grand Duke Boris will be Wilhelm V!"
+part.22.b:0 "Let the Prussians decide, as long as they stay loyal"
+
+part.23.t:0 "A new king!"
+part.23.d:0 "The Russian Empire has imposed Grand Duke Boris as the new King of Prussia. There's nothing we can do, we have to fold and become a kingdom again."
+part.23.a:0 "Long live Wilhelm V!"
+
+part.24.t:0 "The darkest hour of the German Empire"
+part.24.d:0 "According to the second Brest-Litovsk treaty we have signed with Russia we are forced to settle matters in Asia with Japan. From the very start of the negotiations it was clear that the only thing that will fully satisfy the Japaneese empire is the transfer of all our remaining territories in Asia to them."
+part.24.a:0 "Capitulate."
+
+part.25.t:0 "The Darkest Hour of the German Empire"
+part.25.d:0 "According to the second Brest-Litovsk treaty we have signed with Russia we are forced to settle matters with the Commune of France. From the very start of the negotiations it was clear that the only thing that will fully satisfy the Commune of France is the immediate return of the occupied French territory to them."
+part.25.a:0 "Capitulate."
+
+part.26.t:0 "The fate of Geneva"
+part.26.d:0 "After defeating the Commune of France we have gained control over the province of Geneva. Should we give it back to its rightful owner, the Swiss Confederation?"
+part.26.a:0 "Give it back to the Swiss."
+part.26.b:0 "No, it's ours now!"
+
+part.27.t:0 "Eupen and Malmedy"
+part.27.d:0 "The Germans control Eupen-Malmedy, a group of cantons on our eastern border, which has historically always belonged to the Belgian state. If we want to claim it from the Germans we must turn to Russia for support."
+part.27.a:0 "Claim the Eupen-Malmedy cantons!"
+part.27.b:0 "Our resources are overstretched as they are."
+
+part.28.t:0 "Belgium claims the Eupen-Malmedy cantons"
+part.28.d:0 "The puppet government of Belgium has claimed the cantons of Eupen and Malmedy which are controlled by Germany."
+part.28.a:0 "Force the Germans to cede Eupen-Malmedy to Belgium."
+part.28.b:0 "Who is drawing the map here!?"
+part.28.c:0 "Let the people decide!"
+
+part.29.t:0 "Russia support Belgium"
+part.29.d:0 "The bastards in Brussels are trying to weaken us! They have claimed the Eupen-Malmedy cantons, which rightfully belongs to Germany, as their own and they've gotten support from Russia in the matter."
+part.29.a:0 "We'll cede the territory, but only because we have no choice."
+
+part.30.t:0 "Plebiscite in Eupen-Malmedy"
+part.30.d:0 "The Russian state, acting as mediator in the territorial dispute between Belgium and the German empire, has decided that a plebiscite must be held in Eupen-Malmedy."
+part.30.a:0 "We shall await the results."
+
+part.31.t:0 "Plebiscite in Eupen-Malmedy"
+part.31.d:0 "The people flocked to the polling stations and have made their decision."
+part.31.a:0 "Eupen-Malmedy is German!"
+part.31.b:0 "Eupen-Malmedy is Belgian!"
+
+part.32.t:0 "Alsace-Lorraine"
+part.32.d:0 "The Germans currently control Alsace-Lorraine, which historically has always belonged to the French state. If we want to claim it from the Germans we must turn to Russia for support."
+part.32.a:0 "Claim Alsace-Lorraine !"
+part.32.b:0 "Our resources are overstretched as they are."
+
+part.33.t:0 "France claims Alsace-Lorraine"
+part.33.d:0 "The government of France has claimed the former imperial province of Elsass-Lothringen which is currently controlled by Germany."
+part.33.a:0 "Force the Germans to cede Elsass-Lothringen to France."
+part.33.b:0 "A compromise - Lorraine to France, Elsass to Germany!"
+part.33.c:0 "Who is drawing the map here!?"
+part.33.e:0 "Let the people decide."
+
+part.34.t:0 "Plebiscite in Elsass-Lothringen"
+part.34.d:0 "The Russian state, acting as mediator in the territorial dispute between France and the German empire, has decided that a plebiscite must be held in Elsass-Lothringen."
+part.34.a:0 "We shall await the results."
+
+part.35.t:0 "Plebiscite in Elsas-Lothringen"
+part.35.d:0 "The people flocked to the polling stations and have made their decision."
+part.35.a:0 "Elsass-Lothringen is German!"
+part.35.b:0 "Alsace-Lorraine is French!"
+
+part.36.t:0 "Russia supports France"
+part.36.d:0 "The bastards in Paris are trying to weaken us! They have claimed Elsass-Lothringen, which rightfully belongs to Germany, as their own and they've even gotten support from Russia in the matter."
+part.36.a:0 "We'll cede the territory, but only because we have no choice."
+
+part.37.t:0 "Russia partially supports France"
+part.37.d:0 "The bastards in Paris are trying to weaken us! They have claimed Elsass-Lothringen, which rightfully belongs to Germany, as their own and they've even gotten support from Russia in the matter. However, Russia has decided that Elsass shall remain German!"
+part.37.a:0 "We'll cede the territory, but only because we have no choice."
+
+part.38.t:0 "The Luxembourg Question"
+part.38.d:0 "The Grand Duchy of Luxembourg was formerly an independent state. During the Weltkrieg the German army occupied the Grand Duchy which was later incorporated into the German Empire as a new state. Now, with Russia dominance in Europe secured, it is in our power to undone the evils of the German military regime and liberate Luxembourg."
+part.38.a:0 "Order Germany to release Luxembourg!"
+part.38.b:0 "They are still Germans for all we care!"
+part.38.c:0 "Let the people decide."
+
+part.39.t:0 "The Luxembourg Question"
+part.39.d:0 "The Grand Duchy of Luxembourg was formerly an independent state. During the Weltkrieg the German army occupied the Grand Duchy which was later incorporated into the German Empire as a new state. Now, with Russia dominance in Europe secured, it is in our power to undone the evils of the German military regime and liberate Luxembourg."
+part.39.a:0 "Give Luxembourg total freedom, once and for all!"
+part.39.b:0 "Give Luxembourg partial freedom, they must remain loyal to us!"
+part.39.c:0 "We will occupy them for now at least!"
+
+part.40.t:0 "The Russian Ultimatum"
+part.40.d:0 "The Russians have sent us an ultimatum to release the Grand Duchy of Luxembourg!"
+part.40.a:0 "Well, if they insist."
+
+part.41.t:0 "The Independent Luxembourg"
+part.41.d:0 "Luxembourg is now free and at our disposal!"
+part.41.a:0 "Huzzah!"
+
+part.42.t:0 "The Luxembourg plebiscite"
+part.42.d:0 "The Russian state is trying to weaken us! They even forced us to organise a plebiscite concerning the future of the Grand Duchy of Luxembourg."
+part.42.a:0 "We shall await the results."
+
+part.43.t:0 "The Luxembourg plebiscite"
+part.43.d:0 "The people flocked to the polling stations and have made their decision."
+part.43.a:0 "Luxembourg is German!"
+part.43.b:0 "Luxembourg is independent!"
+
+part.44.t:0 "Northern Schleswig"
+part.44.d:0 "The Germans control Northern Schleswig which has historically always belonged to the Danish state. If we want to claim it from the Germans we must turn to Russia for support."
+part.44.a:0 "Claim Northern Schleswig!"
+part.44.b:0 "Our resources are overstretched as they are."
+
+part.45.t:0 "Denmark claims Northern Schleswig"
+part.45.d:0 "The Government of Denmark has claimed Northern Schleswig which is controlled by Germany."
+part.45.a:0 "Force the Germans to cede Northern Schleswig to Denmark."
+part.45.b:0 "Who is drawing the map here!?"
+part.45.c:0 "Let the people decide."
+
+part.46.t:0 "Russia support Denmark"
+part.46.d:0 "The bastards in Copenhagen are trying to weaken us! They have claimed Northern Schleswig, which rightfully belongs to Germany, as their own and they've even gotten support from Russia in the matter."
+part.46.a:0 "We'll cede the territory, but only because we have no choice."
+
+part.47.t:0 "Plebiscite in Northern Schleswig"
+part.47.d:0 "The Russian state, acting as mediator in the territorial dispute between Denmark and the German empire, has decided that a plebiscite must be held in Northern Schleswig."
+part.47.a:0 "We shall await the results."
+
+part.48.t:0 "Plebiscite in Northern Schleswig"
+part.48.d:0 "The people flocked to the polling stations and have made their decision."
+part.48.a:0 "Northern Schleswig is German!"
+part.48.b:0 "Northern Schleswig is Danish!"
+
 part.2.d:0 "The German Empire is defeated! Our brave soldiers proudly march through Unter den Linden, displaying without doubt, that Soviet armed forces prevailed in mortal struggle against the German Empire! We now have to decide what to do with the lands of our enemies."
 
 part.3.t:0 "The Partitioning of Germany"
@@ -55,3 +229,6 @@ part.10.e:0 "Total occupation of Great Britain!"
 ### World Tension ###
 occupy_ger:0 "Occupation of Germany"
 occupy_rhine:0 "Occupation of the Rhineland"
+
+### Factions ###
+russian_dominance:0 "Russian Sphere"
