A little Fengtian tree work.

--- a/localisation/KR_Fengtian_l_english.yml
+++ b/localisation/KR_Fengtian_l_english.yml
@@ -74,6 +74,7 @@ FNG_SQI_UNION_JAP:0 "Fengtian and Shangqing United"
 
 ### New Opinion Modifiers ###
 FNG_MANTETSU_COLLAB:0 "Mantetsu Collaboration"
+FNG_SILVER_RESERVE_FULL:0 "Silver Reserve Full"
 
 ### Foci ###
 FNG_Preservation_of_the_Xinhai_Order:0 "Preservation of the Xinhai Order"
@@ -98,7 +99,7 @@ FNG_Mantetsu_Civil_Engineering_Projects:0 "Mantetsu Civil Engineering Projects"
 FNG_Mantetsu_Civil_Engineering_Projects_desc:0 "While the Japanese have much to benefit directly from large civil engineering projects in Fengtian, they also do so indirectly by helping to present our regime as successful at improving the everyday lives of citizens. In this respect, our interests are mutually shared."
 #Crossover Section
 FNG_Manufacture_Mingsheng:0 "Manufacture Mingsheng"
-FNG_Manufacture_Mingsheng_desc:0 "Back in late 1931 Zhang Zuolin's son, Xueliang, commissioned an American engineer to create China's first automotive vehicle, called 'Mingsheng' or 'people's livelihood'. Fearing compeition to their own vehicles, the Japanese made efforts to interrupt and stall mass-production, but now after many years the pieces have finally fallen into place."
+FNG_Manufacture_Mingsheng_desc:0 "In late 1931 Zhang Zuolin's son, Xueliang, commissioned an American engineer to create China's first automotive vehicle, called 'Mingsheng' or 'people's livelihood'. Fearing compeition to their own vehicles, the Japanese made efforts to interrupt and stall mass-production, but now after many years the pieces have finally fallen into place."
 FNG_Fengtian_Society_for_Light_Metals:0 "Fengtian Society for Light Metals"
 FNG_Fengtian_Society_for_Light_Metals_desc: "Significant deposits of Bauxite and Alunite have been known to exist in Liaoning for many years, but recent advances by Mantetsu sponsored laboratories in Fushun and Tokyo have enabled Aluminium production via a number of electro-chemical processes."
 FNG_Yalu_and_Songhua_Hydroelectricity:0 "Yalu and Songhua Hydroelectricity"
@@ -129,7 +130,7 @@ FNG_Resume_the_Wang_Yongjiang_Reforms_desc:0 "Zhang Zuolin's financial minister 
 FNG_Reform_the_Civil_Service_Examination:0 "Reform the Civil Service Examination"
 FNG_Reform_the_Civil_Service_Examination_desc:0 "In use for well over 2,000 years, the Imperial Civil Service Examination saw only minor reform during the later years of the Qing Dynasty, and is now desperately in need of review in order to form a capable and modern civil service for Fengtian."
 FNG_Centralize_the_Banks:0 "Centralise the Banks"
-FNG_Centralize_the_Banks_desc:0 "Fengtian currently features four note-issuing banks, namely the Bank of the Three Eastern Provinces, the Bank of Kirin, the Bank of Heilungkiang and the Frontier Bank, each of which are products of earlier centralisation efforts. Now it seems pertinent to complete this process and unify the banks under a single Central Bank."
+FNG_Centralize_the_Banks_desc:0 "Fengtian currently features four note-issuing banks, namely the Bank of the Three Eastern Provinces, the Bank of Kirin, the Bank of Heilungkiang and the Frontier Bank, each of which are products of earlier centralisation efforts. Now it seems pertinent to complete this process and unify them all under a single Central Bank."
 FNG_Re-Introduce_the_Fengtian_Dollar:0 "Re-introduce the Fengtian Dollar"
 FNG_Re-Introduce_the_Fengtian_Dollar_desc:0 "The Fengtian Dollar was one of Wang Yongjiang's later experiments, and served as a currency un-backed by silver but still payable in tax, demonstrating the government's faith in its value but requiring no extra silver to print. Following enormous government expenditures during the Civil Wars and subsequent inflation, the currency was discontinued, but its flexibility could be useful today."
 FNG_Support_Sino-Japanese_Joint_Companies:0 "Support Sino-Japanese Joint Companies"
@@ -619,6 +620,18 @@ fengtian.new.51.a:0 "Wonderful news!"
 fengtian.new.52.t:0 "The Public is Incensed!"
 fengtian.new.52.d:0 "Despite our best efforts, both Dr Yen and the general public seem unconvinced by our defence of the Hokkaido Farming project. As a result, the program will almost certainly grind to a halt, and the government's credibility has dwindled significantly."
 fengtian.new.52.a:0 "Damn!"
+#Focus Tree Specific Events
+fengtian.new.53.t:0 "Enrich the Nation, Strengthen the Army"
+fengtian.new.53.d:0 "China's need for reform has been widely acknowledged, from the Qing of late last century, to the warlords of this one, and each has undertaken their own program to move forward into the future. At the same time, this is often easier said than done, and over most reform loom the spectres of discontent, disorder, and eventual revolution. China's rulers, including the Grand Marshal, depend upon traditional power structures, and often unscrupulous methods, to cement their authority. Further complicating matters for Fengtian are the Japanese, who would gladly rush into fill any authority ceded by the state. As such, the Government walks a political tightrope between an archaic past and an uncertain future, pushed forward only by creeping necessity and the insecurity it otherwise bears. \n\n Fengtian's path to reform is butressed by the twin columns of economic and military change, the individual components of which may not be problematic in themselves, but which together may pose risks if pursued independently of political reform. Similarly, most political reform without economic or military change carries its own risks, and the necessary involvement of the Japanese across the spectrum threatens to sweep the state's thin veneer of legitimacy out from under its feet. The waters ahead are treacherous, and it will take a truly great helmsman to steer the ship not only to survival, but also toward the reclamation and rejuvination of the Chinese nation."
+fengtian.new.53.a:0 "Forward!"
+
+fengtian.new.54.t:0 "Enrich the Nation"
+fengtian.new.54.d:0 "While Manchuria's resources are rich and diverse, and Fengtian stands as the third greatest industrial centre in East Asia, its economy remains plagued by a number of structural problems, the symptoms of which cripple the state and slow progress toward Southern Reclamation. Fengtian's biggest investor is the state itself, feeding tax revenues back into key sectors such as steel, coal, and soybean production. Yet, the Japanese and Mantetsu trail the government only marginally in this regard, and invest in a far greater range of sectors, giving them an unquestioned grip upon both Fengtian's economy and society. While the extent of this grip grows by the day, reform could serve to increase the government's revenues through the suppression of otherwise endemic corruption, the creation of a healthier environment for private investment, and the unfortunate but necessary cooperation with Mantetsu in key areas like infrastructure and technology. So long as the government can maintain political autonomy, and at least the majority of control over the economy, it can pursue initiatives to contest Japanese influence, retain legitimacy in the eyes of the Chinese people, and eventually achieve its core goals. \n\n In greater detail, Fengtian's economy is built upon three key products, namely coal, steel, and soy. The former two are mined in large quantities albeit with obsolete methods, as Manchuria's titanic reserves are located close to the surface, while Fengtian's exports of the latter account for over 50% of the world's supply, providing the key ingredient for fertilizers, animal feed, soaps, paints, adhesives, plastics, and a variety of oils. All three constitute important strategic resources, particularly for Japan whose resource scarcity is well known, but even more importantly Fengtian represents a relatively large foreign market to which Japan can export its own products. As such, while they have a vested interest in seeing these three products produced efficiently in large quantities, they're also keen to limit competition in other areas. Thus, the Japanese will only provide assistance with specific efforts aiming to move past our backward industry, even as they attempt to widen their already worrying influence."
+fengtian.new.54.a:0 "Understood"
+
+fengtian.new.55.t:0 "Strengthen the Army"
+fengtian.new.55.d:0 "INSERT"
+fengtian.new.55.a:0 "Understood"
 
 ### Informal Empire Mechanic ###
 fengtian.informalempire.1.t:0 "Expel the Japanese Bandits!"
