small loc error

--- a/localisation/KR_Dominion_of_India_l_english.yml
+++ b/localisation/KR_Dominion_of_India_l_english.yml
@@ -183,7 +183,7 @@ DEH_madras_desc:0 "The nations of southern India must either join India willingl
 DEH_siam:0 "The Burmese Territories in Siam"
 DEH_siam_desc:0 "The Siamese Kingdom was one of the more opportunistic of the 'Vulture States' that exploited the disorder of the Raj's demise. With the young Burmese nation hard-pressed by the socialist uprisings in Assam and Bengal, the government of Siam simply occupied several districts and prefectures, including the city of Moulmein - mentioned in Kipling's famous poem. These lands must be returned!"
 DEH_goa:0 "Claim Goa"
-DEH_goa_desc:0 "The enclave of Goa is nothing more than a burr on the side of our proud nation. It is rightfully our territory, and must be returned."v
+DEH_goa_desc:0 "The enclave of Goa is nothing more than a burr on the side of our proud nation. It is rightfully our territory, and must be returned."
 DEH_ceylon:0 "Claim Ceylon"
 DEH_ceylon_desc:0 "By rights, Ceylon and the Andaman Islands are part of our nation's rightful territory. Their colonialism must come to an end."
 DEH_burma:0 "Incorporating Burma"
