Added some focuses and events for Syndicalist Ireland and nerfed one idea

--- a/localisation/KR_Ireland_l_english.yml
+++ b/localisation/KR_Ireland_l_english.yml
@@ -449,7 +449,7 @@ IRE_ISRA_desc:0 "Industrial accidents, factory sicknesses and other mishaps are 
 IRE_SAFETY_REFORMS:0 "Safety Reforms"
 IRE_SAFETY_REFORMS_desc:0 "Our recent safety reforms have been a big success. Factories in Ireland could previously be dangerous environments and work-related accidents were common. Now, less workers are laid off because of injury or sickness, increasing the productivity of our industries."
 IRE_AIWW:0 "Irish Women in the Workplace"
-IRE_AIWW_desc:0 "Ireland has in the past been a principally conservative nation, held in thrall to the Catholic church. Irish republicanism and nationalist movements have begun to influence opinions however, and there is a growing demand for women to be emancipated from the home and granted more independence. Encouraging employers to hire more women would place less strain on our male population."
+IRE_AIWW_desc:0 "Ireland has in the past been a principally conservative nation, held in thrall to the Catholic church. Irish republicanism and nationalist movements have begun to influence opinions however, and there is a growing demand for women to be emancipated from the home and granted more independence, creating more employable workers and boosting our economy."
 IRE_WOMEN_INDUSTRY:0 "Women In Industry"
 IRE_WOMEN_INDUSTRY_desc:0 "By encouraging women to feel confident in escaping their traditional role as homemakers, we've put less strain on our male population and can as a result recruit more of them as soldiers for the Irish Republican Army."
 IRE_WIAR:0 "National Tax Reform"
@@ -626,6 +626,11 @@ IRE_YOUTHBRIGADES2:0 "Organised Youth"
 IRE_YOUTHBRIGADES2_desc:0 "Both the young boys and girls of Ireland have been organised into scouts, where they are taught valuable skills and culturally integrated into society. Having organised youth serve as paramilitaries in war-time gives a valuable boost to our recruitable population."
 IRE_IIA:0 "Improve Integration for Irish-Americans"
 IRE_IIA_desc:0 "The refugee population that we have received from North America have been welcomed for the most part with open arms by their Irish brothers and sisters. But there is always bound to be tensions and difficulties for such a large group of people trying to make their way in a new land. We can take measures to better integrate the Irish-Americans into our society."
+
+# Syndicalist Congress
+IRE_ACS:0 "An Chomhdháil Siondacáiteach"
+IRE_ACS_desc:0 "Now that James Connolly's dream has been made a reality, we are set to replace the provisional government. The three factions are the radical socialist nationalists of Saor Éire led by Betty Sinclair and Peadar O'Donnell, the syndicalist Irish Worker League led by Jim Larkin and his former rival William X. O'Brien, and the Revolutionary Workers Group led by totalist Sean Murray and Jim Gralton."
+
 # Ulster Question Wing
 IRE_SOU:0 "The Status of Ulster"
 IRE_SOU_desc:0 "Since Ireland gained her freedom, the status of Ulster has loomed over the rest of the nation like a spectre. The Unionist majority in the region have felt increasingly alienated by the government’s policies and tensions have been rising steadily in recent times. People are calling for serious action on the Ulster question, and the government is ready to take whatever actions are necessary to resolve it."
@@ -730,6 +735,10 @@ IRE_REFUGEEWORK:0 "Refugee Employment Program"
 IRE_REFUGEEWORK_desc:0 "Since arriving in Ireland, many refugees have had problems finding employment, which has created some tensions in our society. One solution would be to employ those refugees in public works programs that will help develop Ireland."
 IRE_REFUGEEFIGHT:0 "Recruit the Fighting Men"
 IRE_REFUGEEFIGHT_desc:0 "Since arriving in Ireland, many refugees have had problems finding employment, which has created some tensions in our society. One solution would be to enlist those refugees in the army to serve their newfound homeland."
+
+# France
+IRE_ALLYFRANCE:0 "Join the Internationale"
+IRE_ALLYFRANCE_desc:0 "Dring the French Revolutionary Wars, the French attempted to aid the Irish twice, once during the failed expedition to Ireland in 1796, and later landing troops during the 1798 Rebellion, liberating parts of Connacht before ultimately being defeated. Now that both the French and the Irish have embraced the revolution, shall we stand together once more against imperialist tyranny?"
 
 #Foreign Polcy
 ire.170.t:0 "Irish Diplomatic Mission to Britain"
@@ -873,21 +882,54 @@ ire.210.t:0 "Immigration and the Economy"
 ire.210.d:0 "The influx of American capital and technical expertise, not to mention cheap labour, has had a positive effect on our economy."
 ire.210.a:0 "Great!"
 
-### Syndicalist Foreign Policy ###
-ire.216.t:0 "Foreign Policy"
-ire.216.d:0 "With Ireland finally free from capitalist oppression we can now freely decide our stance towards the international community. While many are arguing for the immediate alliance with the other Syndicalist nations, it might be wise enough to remain neutral to rebuild our country."
-ire.216.a:0 "We must join arms with France."
-ire.216.b:0 "Isolationism, we must organise our country."
-ire.217.t:0 "Ireland wants to join the Internationale"
-ire.217.d:0 "The government of Ireland has announced recently that they wish to join the Internationale after their recent Syndicalist coup. Do we want the Irish workers joining our crusade against the forces of imperialism and capitalism?"
-ire.217.a:0 "Of course!"
-ire.217.b:0 "Who needs them?"
-ire.218.t:0 "We join the Internationale!"
-ire.218.d:0 "The French are happy to see us joining the common cause - the spreading of the revolution throughout the world. Now we are part of the Internationale."
-ire.218.a:0 "Rise up the starry plough!"
-ire.219.t:0 "France refuses!"
-ire.219.d:0 "The French have refused our request for entry in the Internationale."
-ire.219.a:0 "Their loss!"
+### Syndicalist Ireland ###
+ire.216.t:0 "Ireland wants to join the Internationale"
+ire.216.d:0 "The government of Ireland has announced recently that they wish to join the Internationale after their recent Syndicalist coup. Do we want the Irish workers joining our crusade against the forces of imperialism and capitalism?"
+ire.216.a:0 "Of course!"
+ire.216.b:0 "Who needs them?"
+ire.217.t:0 "We join the Internationale!"
+ire.217.d:0 "The French are happy to see us joining the common cause - the spreading of the revolution throughout the world. Now we are part of the Internationale."
+ire.217.a:0 "Rise up the starry plough!"
+ire.218.t:0 "France refuses!"
+ire.218.d:0 "The French have refused our request for entry in the Internationale."
+ire.218.a:0 "Their loss!"
+ire.219.t:0 "ACS Economic Policy"
+ire.219.d:0 "The first issue is the economy, Saor Éire advocate for building infastructure in Ireland's poorest areas to aid the people there, the Irish Worker League support further industrialisation of Ireland's main cities under the control of the workers, while the Revolutionary Workers Group propose public works projects to revitalise the Irish economy and bolster support for the new revolutionary government."
+ire.219.a:0 "RWG: A series of public works projects!"
+ire.219.b:0 "IWL: Further industrialisation!"
+ire.219.c:0 "SÉ: We must aid our poorest regions!"
+ire.220.t:0 "ACS Language Policy"
+ire.220.d:0 "Next is the question of the Irish language, Saor Éire advocate for a full cultural revival campaign, the Irish Worker League believe that as James Connolly once said "you cannot teach a starving man Gaelic" and that it should be left for another time, while the Revolutionary Workers Group believe that some efforts should be taken, but that there are higher priorities."
+ire.220.a:0 "RWG: Give it some effort."
+ire.220.b:0 "IWL: There are other priorities."
+ire.220.c:0 "SÉ: We must begin a revival campaign!"
+ire.221.t:0 "ACS Religious Policy"
+ire.221.d:0 "The issue next on the agenda is the fate of religion, Saor Éire believe that religion should be left alone as it would upset many, both Catholic and Protestant, the Irish Worker League advocate nationalising the Irish school system while the Revolutionary Worker's Group are of the opinion that all traces of religion should be removed from the state."
+ire.221.a:0 "RWG: All religion must be removed from official matters!"
+ire.221.b:0 "IWL: Nationalise the school system!"
+ire.221.c:0 "SÉ: The matter should be left alone."
+ire.222.t:0 "ACS Foreign Policy"
+ire.222.d:0 "The next issue is foreign relations, Saor Éire seek to evenly balance relations with the Internationale, the Irish Worker League want to pursue further relations with the British, while the Revolutionary Workers Group wish to align with the French."
+ire.222.a:0 "RWG: We must befriend our revolutionary allies in Europe, France!"
+ire.222.b:0 "IWL: We have closer ties with the workers movement in Britain."
+ire.222.c:0 "SÉ: Evenly balance relations, we are all in this together!"
+ire.223.t:0 "ACS Military Policy"
+ire.223.d:0 "The final issue is which branch of the military should be focused on most. Saor Éire argue that Ireland must defend itself from the air and assist the air forces of the Internationale, while the Irish Worker League advocate a people's army to defend Ireland against invasion and aid the revolution abroad, while the Revolutionary Workers Group believe that Ireland must focus on its navy to defend itself from the ships of the German and Canadian navies and assist the Franco-British navies."
+ire.223.a:0 "RWG: Focus on the navy!"
+ire.223.b:0 "IWL: Focus on the army!"
+ire.223.c:0 "SÉ: Focus on the air force!"
+ire.224.t:0 "RWG secures a majority"
+ire.224.d:0 "The Syndicalist Congress has decided to vote for Seán Murray's Revolutionary Workers Group with a majority."
+ire.224.a:0 "Congratuations, Comrádaí Murray."
+ire.225.t:0 "SÉ secures a majority"
+ire.225.d:0 "The Syndicalist Congress has decided to vote for Betty Sinclair's Saor Éire with a majority."
+ire.225.a:0 "Congratulations, Comrádaí Sinclair."
+ire.226.t:0 "IWL secures a majority"
+ire.226.d:0 "The Syndicalist Congress has decided to vote for Jim Larkin's Irish Worker League with a majority."
+ire.226.a:0 "Congratulations, Comrádaí Larkin."
+ire.227.t:0 "ACS ends in a draw"
+ire.227.d:0 "The congress has resulted in a draw, leading to a maintenance of the revolutionary provisional government."
+ire.227.a:0 "Maintain the revolutionary government!"
 
 ### FP Ideas ###
 IRE_FINAL_STRUGGLE:0 "The Final Struggle"
@@ -1012,6 +1054,10 @@ IRE_ACA:0 "The Army Comrades Association"
 IRE_ACA_desc:0 "Our government has been approached by an organisation calling themselves the Army Comrades Association, whom our Taoiseach Eoin O'Duffy is closely associated with. They are offering to help supplement our security forces in dealing with any potential opposition to the government of the Irish State."
 IRE_BLUEBLOUSES:0 "Recruit the Blueblouses"
 IRE_BLUEBLOUSES_desc:0 "Eoin O'Duffy has today been petitioned by several local branches of the female wing of the ACA, known as Blueblouses (a play on the nickname of the ACA, Blueshirts). They are asking to serve alongside other members of the ACA in our military. Should we allow this?"
+IRE_ICA:0 "The Irish Citizen Army"
+IRE_ICA_desc:0 "After the end of the Irish War of Independence, the Irish Citizen Army was revived by those angered at the betrayal of the cause of labour by the new Collins regime. Now that we have at last achieved our goal in overthrowing the bourgeois Irish government, shall we offically recognise them, and allow them to aid our forces in hunting down reactionary enemies of the state?"
+IRE_CNM:0 "Women in the Army"
+IRE_CNM_desc:0 "Despite the brave service of women in the Cumann na mBan and Irish Citizen Army, they were marginalised afterwards, only serving as auxiliary units during the War of Independence. The reborn ICA allowed women to join as the Citizen Army of the past did, but now that the former insurgents are in power shall women serve in the military proper?"
 IRE_FLYINGCOLUMNS:0 "The New Flying Column"
 IRE_FLYINGCOLUMNS_desc:0 "While the reforming of the Army has been a long process, it is now finally complete and the nation is stronger and prouder for it, knowing that in the event of an invasion the defence of Ireland will be in strong and able hands."
 
