--- a/localisation/KR_Brazil_l_english.yml
+++ b/localisation/KR_Brazil_l_english.yml
@@ -58,13 +58,13 @@ BRA_joint_ventures_desc:0 "By establishing joint ventures with our private secto
 BRA_heavy_intervencionism:0 "Heavy-Handed Interventionism"
 BRA_heavy_intervencionism_desc:0 "Sometimes, even the 'invisible hand' needs a good nudge in the right direction. This is one of those times, the state must take greater reign over the economy!"
 BRA_infrastructure_effort:0 "National Infrastructure Plan"
-BRA_infrastructure_effort_desc:0 "With our industry well on its way to recovery, we should focus on another great issue we face. Our factories are isolated, and our goods and people are only linked by century-old cobblestone roads and dilapidated railways. We must plan a modern infrastucture grid, with asphalt roads and renovated railways."
+BRA_infrastructure_effort_desc:0 "With our industry well on its way to recovery, we should focus on another great issue we face. Our factories are isolated, and our goods and people are only linked by cobblestone roads and dilapidated railways. We must plan a modern infrastucture grid, with asphalt roads and renovated railways."
 BRA_taming_jungle:0 "Taming the Jungle"
 BRA_taming_jungle_desc:0 "Constructing a railway across the Amazon Jungle linking Manaus and other cities of the Amazonas to the rest of the nation has always been an ambition of Brazil. Now more than never, we must attempt to make a breakthrough in this titanic infrastructure project."
 BRA_industrialization:0 "Urban Industrialisation"
 BRA_industrialization_desc:0 "Belo Horizonte, Goiania and many other cities in the interior of the country have for too long been neglected. Let us give them the development they deserve and turn them into thriving population centers and economical hubs."
 BRA_paulista_metropolis:0 "The Paulista Metropolis"
-BRA_paulista_metropolis_desc:0 "Investing in the municipality of Paulista, and granting it a direct connection to Rio, will rapidly pay economic dividends. Linking our coastline in this way will also help us dynamise our industrial and research sectors."
+BRA_paulista_metropolis_desc:0 "Investing in the municipality of Paulista and granting it a direct connection to Rio will rapidly pay economic dividends. Linking our coastline in this way will also help us dynamise our industrial and research sectors."
 BRA_sertao:0 "Taming the Sertão"
 BRA_sertao_desc:0 "Vast dry lands, poor and weary villagers, small towns and the scorching midday sun. A stark reminder of a time when Brazil was almost antonymous with progress. Properly connected to the rest of the country via rail and road, time alone will quickly prove the end to this anachronistic scenery."
 BRA_state_owned:0 "Confiscate Lands from the Bourgeoisie"
